See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.43.00

              pnmnorm: fix -colorvalue, -saturation, -keephues options.

              pnmnorm: fix resolution of conflicting -wpercent and -wvalue.

              Build: make it work with Gcc 4.3 and -sse.

08.03.26 BJH  Release 10.42.00

              anytopnm: Recognize xwd image by 'file' type.

              pamflip: Rewrite low-memory algorithm; use temp files and
              conserve virtual as well as real memory.

              tifftopnm: orient raster properly in row-by-row operation
              when TIFF uses nonstandard raster orientation.  (ORIENTATION
              tag).

              pbmtext: fail cleanly if -width, -space, or -lspace is
              too large for computation.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pbmtext: fix negative -space.

              pbmtext: fail cleanly if input line is > 5000 characters.

              pamundice: Fix bogus error about missing "-instem" option.

              pgmdeshadow: fix crash in option processing.

              pgmmedian: fix crash.

              pgmbentley: fix output; black areas not black.

              pamtosvg: fix various bugs: crash, poor tracing, memory leaks.

              pamtosvg: fix log file name with Standard Input.
              
              ppmtoarbtxt: fix array bounds violation with really large
              replacement sequence.

              ppmtoarbtxt: fix missing right parenthesis with impostor
              replacement sequence.

              pnmnlfilt: fix internal error "impossible alpha value".

              Add pm_tmpfile_fd() and pm_make_tmpfile_fd().

              Various things to make it build on Windows without POSIX
              emulation.

              Build: Include LDFLAGS environment variable in link of
              build tools.
              